# PhiLog

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: IOutput.hpp  LogLevel.hpp  PhiLog.cpp  PhiLog.hpp  Utilities.hpp
src/Outputs/: DiscreteFileOutput.hpp  StdOuput.cpp  StdOutput.cpp  StdOutput.hpp
